added engine strict to packagejson

--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  
+    "engines": {
+      "node": ">=18.0.0",
+      "npm" : ">=10.1.0"
+    }
+}
+
+{
+  {
+    "engineStrict": true
+  },
+
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
@@ -13,3 +25,4 @@
     "uniqid": "^5.3.0"
   }
 }
+
