--- a/package.json
+++ b/package.json
@@ -1,16 +1,4 @@
 {
-  
-    "engines": {
-      "node": ">=18.0.0",
-      "npm" : ">=10.1.0"
-    }
-}
-
-{
-  {
-    "engineStrict": true
-  },
-
   "name": "note-taker",
   "version": "1.0.0",
   "description": "",
@@ -23,6 +11,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "uniqid": "^5.3.0"
+  },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
   }
 }
 
